<resources>
    <string name="app_name">CornAnalyze</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">GALERI</string>
    <string name="analyze8020">ANALISA 80:20</string>
    <string name="analyze7030">ANALISA 70:30</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="contact">Kontak Kami</string>
    <string name="change_language">Ganti Bahasa</string>
    <string name="history">History</string>
    <string name="scan">Scan</string>
    <string name="home">Home</string>
    <string name="blight_leaf">Blight Leaf</string>
    <string name="healthy">Healthy Leaf</string>
    <string name="next">Next</string>
    <string name="periksa_tanaman">Periksa tanaman anda, diagnosis penyakit \ndan dapatkan tips mengatasinya!</string>
    <string name="mengidentifikasi_masalah">Mengidentifikasi masalah tanaman jagung</string>
    <string name="mari_mendiagnosis">Mari Mendiagnosis</string>
    <string name="mengatasi_commonrust">1. Menanam varietas tahan karat daun jagung yang sehat. \n2. Mengatur jarak tanam untuk menjaga suhu dan kelembaban tanaman. \n3. Menanam di awal musim kemarau. \n4. Menggunakan pestisida kimiawi seperti zineb, oksilorida tembaga, Fermat, dan dithane.</string>
    <string name="sumber_commonrust">Sumber : \n1. Jurnal : D. Iswantoro and D. Handayani UN, “Klasifikasi Penyakit Tanaman Jagung Menggunakan Metode Convolutional Neural Network (CNN),” J. Ilm. Univ. Batanghari Jambi, vol. 22, no. 2, p. 900, 2022, doi: 10.33087/jiubj.v22i2.2065. \n2. Website : https://bbpopt.tanamanpangan.pertanian.go.id/artikel/penyakit-karat-daun-tanaman-jagung. \n3. Jurnal : Interaksi Faktor Iklim dan Varietas terhadap Laju Perkembangan Penyakit Karat Daun (Puccinia polysora Undrew) pada Jagung (Zea mays L.) oleh Reymas M.R. Ruimassa, Rosdiana Sari, Eko Agus Martanto. \n4. Website : https://plantix.net/id/library/plant-diseases/100082/common-rust-of-maize/.</string>
    <string name="cara_mengendalikan_penyakit_karat_daun">Cara mengendalikan penyakit karat daun :</string>
    <string name="gejala_common_rust">1. Lesi kecil pada daun yang kemudian melingkar dan memanjang. \n2. Cendawan keluar dari permukaan daun. \n3. Lesi menjadi lebih memanjang dan biasanya terjadi halo kuning. \n4. Bisul (pustul) pada kedua permuakaan daun bagian atas dan bawah dengan warna coklat kemerahan.</string>
    <string name="gejala_penyakit_karat_daun_jagung">Gejala Penyakit Karat Daun Jagung :</string>
    <string name="faktor_common_rust">1. Spora : Spora jamur dapat dipindahkan oleh angin dan hujan ke tanaman lain yang sehat. \n2. Kelembaban : Kelembaban yang tinggi mendukung perkemabngan penyakit ini. \n3. Suhu : Suhu dingin antara 15-20 derajat celcius mendukung perkembangan penyakit ini. \n4. Genetik : Setiap varietas jagung memiliki sifat ketahanan yang berbeda terhadap penyakit ini.</string>
    <string name="faktor_penyebab_karat_daun_pada_jagung">Faktor Penyebab Karat Daun Pada Jagung :</string>
    <string name="deskripsi_common_rust">Penyakit karat daun (common rust) yang diakibatkan oleh Pucciania sorgi terindikasi dini berbentuk bintik-bintik merah dengan mengeluarkan serbuk semacam tepung bercorak coklat kekuningan. Dengan adanya penyakit ini, tumbuhan jagung tidak bsia melakukan fotosintesis dengan sempurna yang berakibat pertumbuhan menjadi lamat dan dapat meyebabkan tumbuhan mati.</string>
    <string name="title_common_rust">Keterangan Daun Common Rust (Karat Daun)</string>
    <string name="common_rust">Common Rust</string>
    <string name="sumber_healthy">Sumber : \n1. Skripsi : Reza Mawarni,Resty Wulaningrum,Risa Helilintar "Implementasi Metode CNN Pada Klasifikasi Penyakit Jagung". \n2. Skripsi : Alima Maolidea Suri "Uji Efektivitas Ekstrak Daun Jeruk Nipis (Citrus aurantifolia) Sebagai Bioherbisida Untuk Pengencalian Gulma Teki (Cyperus rotundus) Pada Tanaman Jagung</string>
    <string name="ciri_healthy">Berikut adalah ciri-ciri daun jagung sehat : \n\n1. Jumlah daun : Jumlah daun jagung sesuai dengan jumlah buku pada batangnya, umumnya berkisar 10-18 helai daun. \n\n2. Pola daun : Pola daun jagung berupa garis lurus sepanjang daun, garis-gairs tersebut memiliki jarak tertentu.</string>
    <string name="ciri_ciri_daun_jagung_sehat">Ciri-Ciri Daun Jagung Sehat:</string>
    <string name="deskripsi_healthy">Daun jagung yang sehat adalah daun yang memiliki kondisi optimal dan berada dalam keadaan baik, tanpa adanya tanda-tanda kerusakan seperti bercak, perubahan warna, atau kelainan lain pada permukaannya. \n\nDaun ini mencerminkan kesehatan tanaman secara keseluruhan, karena tidak menujukkan gejala gangguan yang dapat disebabkan oleh penyakit, hama, atau faktor lingkungan yang merugikan. \n\nDaun jagung merupakan jenis daun sempurna yang memiliki bentuk memanjang. Salah satu ciri khasnya adalah kehadiran ligula yang terletak di antara pelepah daun dan helai daun. Tulang daun jagung tersusun sejajar dengan ibu tulang daun, menciptakan struktur yang teratur. Permukaan daun ini bervariasi, ada yang terasa licin saat disentuh, tetapi ada juga yang memiliki lapisan berambut halus. \n\nStomata pada daun jagung memiliki bentuk unik yang menyerupai halter, sebuah karakteristik khas dari tanaman yang termasuk dalam famili Poaceae. Setiap stomata dikelilingi oleh sel-sel epidermis berbentuk seperti kipas. Struktur ini memiliki fungsi penting dalam membantu tanaman merespons defisit air yang terjadi pada sel-sel daun, sehingga memungkinkan daun jagung untuk beradaptasi dengan kondisi lingkungan yang kering atau kurang air.</string>
    <string name="healthy_title">Healthy</string>
    <string name="prediksi">Prediksi :</string>
    <string name="deksripsi">Deksripsi :</string>
    <string name="keterangan_daun_jagung_sehat">Keterangan Daun Jagung Sehat</string>
    <string name="keterangan_daun_gray_leaf_spot_bercak_daun">Keterangan Daun Gray Leaf Spot (Bercak Daun)</string>
    <string name="deskripsi_gray_leaf_spot">Penyakit bercak daun (gray leaf spot) merupakan penyakit yang memiliki gejala awal berupa daun abu-abu yang terlihat seperti lesi bulat kecil dengan memiliki lingkaran kuning yang berada disekitar daun. Lesi tersebut dapat berubah menjadi coklat sebelum sporulasi jamur dimulai. Penyakit ini pada tahap awalnya sangat sulit untuk diidentifikasi karena bercak menyerupai penyakit karat daun pada umumnya.</string>
    <string name="faktor_penyebab_bercak_daun_pada_jagung">Faktor Penyebab Bercak Daun Pada Jagung :</string>
    <string name="faktor_gray_leaf_spot">1. Jamur: Penyakit ini disebabkan oleh jamur Cercospora zeae-maydis yang dapat bertahan dalam sisa-sisa tanaman di tanah. \n2. Suhu: Suhu hangat yang mendukung perkembangan penyakit adalah sekitar 27°C (80°F). \n3. Kelembaban: Kelembaban tinggi yang mendukung perkembangan penyakit adalah sekitar 90% atau lebih tinggi selama 12 jam atau lebih \n4. Pengolahan tanah: Sistem penanaman dengan pengolahan tanah yang dikurangi atau tanpa olah tanah dapat meningkatkan risiko wabah penyakit ini. \n5. Penanaman jagung terus-menerus: Penanaman jagung secara terus-menerus juga dapat meningkatkan risiko wabah penyakit ini. \n6. Hibrida yang rentan: Hibrida yang rentan lebih mudah terserang penyakit ini. \n7. Tanggal penanaman: Penanaman yang terlambat dapat meningkatkan risiko wabah penyakit ini. \n8. Riwayat penyakit parah: Riwayat lapangan penyakit parah dapat meningkatkan risiko wabah penyakit ini. \n9. Irigasi: Irigasi dapat meningkatkan risiko wabah penyakit ini. </string>
    <string name="gejala_penyakit_bercak_daun_jagung">Gejala Penyakit Bercak Daun Jagung :</string>
    <string name="gejala_gray_leaf_spot">1. Muncul bercak kecil berwarna hijau keabu-abuan atau cokelat berbentuk oval pada daun jagung. \n2. Bercak tersebut berkembang menjadi memanjang berbentuk elips. \n3. Bercak meluas dan mengering. \n4. Bercak dapat mencapai panjang 2,5-15 cm. \n5. Bercak muncul pada daun tua, kemudian berkembang ke daun muda. \n6. Infeksi berat dapat menyebabkan tanaman jagung cepat mati atau mengering. \n\nGejala awal penyakit ini muncul pada daun bagian bawah sekitar dua hingga tiga minggu sebelum munculnya rumbai. Lesi daun yang muncul berbentuk persegi panjang, berwarna cokelat muda, dan dibatasi oleh urat daun. </string>
    <string name="mengatasi_gray_leaf_spot">Cara mengendalikan penyakit karat daun :</string>
    <string name="cara_mengendalikan_gray_leaf_spot">1. Menanam varietas yang tahan terhadap penyakit. \n2. Memusnahkan seluruh bagian tanaman yang terinfeksi, termasuk akarnya. \n3. Menyemprotkan fungisida pada tahap awal. \n4. Melakukan rotasi tanaman jangka panjang dengan tanaman bukan inang. \n5. Memperluas ruang di antara tanaman untuk menjaga peredaran udara yang baik. \n6. Menanam di awal musim kemarau.</string>
    <string name="sumber_gray_leaf_spot">Sumber : \n1. Jurnal : A. Sapitri, J. Raharjo, and S. Rizal, “Identifikasi Penyakit Jagung Dengan Menerapkan Metode Gray Level Co-Occurrence Matrix (GLCM) Dan Support Vector Machine (SVM) Melalui Citra Daun Identification Of Corn Diseases By Applying Gray Level Co-Occurrence Matrix (GLCM) And Support Vector Machine ,” e-Proceeding Eng., vol. 8, no. 6, pp. 2963–2971, 2022. \n2. Jurnal : Identifikasi Jenis Penyakit Daun Jagung Menggunakan Deep Learning PreTrained Model oleh Muhammad Imron Rosadi dan Moch.Lutfi. \n3. Website : https://cropprotectionnetwork.org/encyclopedia/gray-leaf-spot-of-corn. \n4. Website : https://www.pioneer.com/us/agronomy/gray_leaf_spot_cropfocus.html \n5. Website : https://plantix.net/id/library/plant-diseases/100107/grey-leaf-spot-of-maize/ \n6. Website Edu : https://extensionpubs.unl.edu/publication/g1902/na/html/view \n7. Facebook : Direktorat Jenderal Tanaman Pangan - Kementan RI. \n8. Skripsi : Potensi Antagonis Jamur Dari Endofit Daun Jagung Terhadap Helminthosporium turcicum oleh Faizah, Akhamat Riza. \n9. Website Kompas : Penyakit Hawar Daun Jagung : Gejala, Siklus, dan Cara Menagtasi</string>
    <string name="common_rust_leaf">Common Rust Leaf</string>
    <string name="GrayLeafSpot_Leaf">Gray Leaf Spot Leaf</string>
    <string name="result">Hasil Analisa</string>
    <string name="saran">Saran : </string>
    <string name="simpan">SIMPAN HASIL</string>
    <string name="jenis_daun_tanaman_jagung">Jenis Daun Tanaman Jagung</string>
    <string name="mulai_scan_sekarang">Mulai Scan \nSekarang</string>
    <string name="pelajari_lebih_lanjut">Pelajari Lebih Lanjut</string>
    <string name="healthy_daun_sehat">Healthy\n(Daun Sehat)</string>
    <string name="gray_leaf_spot_bercak_daun">Gray Leaf Spot\n(Bercak Daun)</string>
    <string name="blight_hawar_daun">Blight\n(Hawar Daun)</string>
    <string name="tutorial1">1. Pada menu home klik menu \"Scan\" atau bisa klik pada tombol \"Mulai Scan Sekarang\"</string>
    <string name="tutorial2">2. Selanjutnya pilih ingin menggunakan kamera aplikasi atau menggunakan gambar yang sudah ada di galeri. \n\nKeterangan : no 1 untuk camera aplikasi no 2 untuk galeri</string>
    <string name="tutorial3">3. Kemudian ketika sudah memilih gambar, yaitu perlu melakukan crop pada gambar, jika sudah klik tanda ceklis dipojok kanan atas.</string>
    <string name="tutorial4">4. Jika sudah mencrop, selanjutnya pilih tombol \"ANALISA\" untuk menganalisa gambar.</string>
    <string name="tutorial5">5. Hasil analisa akan muncul, jika ingin menyimpannya maka hanya perlu menekan tombol \"SIMPAN HASIL\"</string>
    <string name="tutorial6">6. Hasil yang sudah tersimpan akan tampil di History Tersimpan yang dapat dikunjungi pada meun History, pada menu tersebut dapat melakukan penghapusan pada item tersimpan dengan mengklik icon \"Tong sampah\", selain itu dapat melaihat detail dari scanning dengan mengklik pada salah satu item.</string>
    <string name="tutorial7">7. Apabila mengklik salah satu item maka akan memunculkan detail sebagai berikut.</string>
</resources>