<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".leaf.HealthLeaf"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <TextView
            android:id="@+id/tv_healthy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/healthy_title"
            android:fontFamily="@font/poppins_bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_logo"
            android:background="@drawable/rounded_corner"
            app:layout_constraintStart_toStartOf="@+id/tv_healthy"
            app:layout_constraintTop_toBottomOf="@+id/tv_healthy" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="5dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="380dp"
            android:layout_height="300dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:clipToOutline="true"
            android:scaleType="centerCrop"
            android:src="@drawable/iv_healthy"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <!-- Judul -->
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/keterangan_daun_jagung_sehat"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_medium"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <!-- Keterangan Panjang -->
            <TextView
                android:id="@+id/long_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="16dp"
                android:text="@string/deskripsi_healthy"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular" />

            <!-- Ciri-ciri Judul -->
            <TextView
                android:id="@+id/ciri_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:text="@string/ciri_ciri_daun_jagung_sehat"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- List Ciri-ciri -->
            <TextView
                android:id="@+id/ciri_healthy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="6dp"
                android:paddingBottom="12dp"
                android:text="@string/ciri_healthy"
                android:textSize="16sp" />

            <!-- Catatan -->
            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="4dp"
                android:paddingTop="8dp"
                android:text="@string/sumber_healthy"
                android:textColor="#757575"
                android:fontFamily="@font/poppins_medium"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>